package com.ftn.sbnz.model.enums;

public enum AnalyticStatusType {

    PROTEIN_WARNING,
    PROTEIN_DISTRIBUTION_CONFLICT,
    PROTEIN_CRITICAL,

    ENERGY_SHORTAGE,
    OVEREATING_DETECTED,

    MUSCLE_LOSS_RISK,

    WEIGHT_STAGNATION_CONFIRMED,
    CALORIC_ADAPTATION_BLOCK,
    PLAN_CHANGE_NEEDED,

    EXTREME_CALORIC_RESTRICTION,
    CALORIC_SURPLUS_ACCUMULATION,
    LOW_PROTEIN_MEAL
    ,
    PROTEIN_INSUFFICIENT,
    CIRCADIAN_RHYTHM_DISRUPTION,
    WEIGHT_STAGNATION_DETECTED,
    CALORIE_SPIKE_DETECTED,
    LONG_FAST_DETECTED,
    HIGH_PROTEIN_HYDRATION_NEEDED
}
