package com.ftn.sbnz.model.enums;

public enum DailyIntakeStatus {
    SURPLUS,
    DEFICIT,
    MAINTENANCE_STABLE,
    CONFLICT_HIGH,
    CONFLICT_CRITICAL
}
