package com.ftn.sbnz.model.enums;

public enum Gender {

    MALE,
    FEMALE
}