package com.ftn.sbnz.model.enums;

public enum GoalType {

    WEIGHT_LOSS,
    MAINTENANCE,
    MUSCLE_GAIN
}