package com.ftn.sbnz.model.enums;

public enum MealCategory {

    BREAKFAST,
    LUNCH,
    DINNER,
    SNACK
}