package com.ftn.sbnz.model.enums;

public enum SeverityLevel {

    LOW,
    WARNING,
    HIGH,
    CRITICAL
}