package com.ftn.sbnz.model.enums;

public enum WeightTrend {

    NEGATIVE,
    POSITIVE,
    STABLE
}